# karma_manager

./: package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/: karma_api.rs  mod.rs
src-tauri/src/model/: karma.rs  mod.rs  user.rs
src-tauri/src/service/: mod.rs
src-tauri/src/service/accounts/: acounts_service.rs  mod.rs
src-tauri/src/service/karma/: karma_service.rs  mod.rs
src-tauri/src/storage/: db.rs  karma_repository.rs  mod.rs  user_repository.rs
src/lib/: Karma.svelte  Login.svelte
src/routes/: +page.svelte
